UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Held_Requested__c.field-meta.xml
<CustomField>
    <fullName>Held_Requested__c</fullName>
    <label>Held Requested</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Held for Sales</fullName>
            </value>
            <value>
                <fullName>Held for NCOE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>