UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Hot_Cut__c.field-meta.xml
<CustomField>
    <fullName>Hot_Cut__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hot Cut</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>