UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Hot_Cut_Stage__c.field-meta.xml
<CustomField>
    <fullName>Hot_Cut_Stage__c</fullName>
    <label>Hot Cut Stage</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UCaaS_Cutover_Picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Kickoff Call</fullName>
            </value>
            <value>
                <fullName>DPI &amp; TN Provisioning</fullName>
            </value>
            <value>
                <fullName>Internal Review</fullName>
            </value>
            <value>
                <fullName>CXR Touch Point</fullName>
            </value>
            <value>
                <fullName>Porting</fullName>
            </value>
            <value>
                <fullName>TTU</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>HOTCUT Completed</fullName>
            </value>
            <value>
                <fullName>Review Order</fullName>
            </value>
            <value>
                <fullName>Revised CDC Uploaded</fullName>
            </value>
            <value>
                <fullName>Checklist in Progress</fullName>
            </value>
            <value>
                <fullName>Checklist Completed</fullName>
            </value>
            <value>
                <fullName>Schedule Migration Call</fullName>
            </value>
            <value>
                <fullName>Migration Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>