UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/HOTCUT_Lock__c.field-meta.xml
<CustomField>
    <fullName>HOTCUT_Lock__c</fullName>
    <formula>OR(
ispickval(CPE_DCS_Stage__c, &quot;Review Order&quot;),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Review Order&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Review Order&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Schedule CDC Call&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Review Order&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Revised CDC Uploaded&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist Completed&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Internal Call Scheduled&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist in Progress&quot;)
),

AND(
ispickval(CPE_DCS_Stage__c, &quot;Internal Call Scheduled&quot;),
ispickval(Hot_Cut_Stage__c, &quot;Checklist Completed&quot;)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOTCUT Lock</label>
    <type>Checkbox</type>
</CustomField>