UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/How_many_park_keys__c.field-meta.xml
<CustomField>
    <fullName>How_many_park_keys__c</fullName>
    <label>How many park keys?</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>