UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/How_many_Remote_Call_Forward_Paths__c.field-meta.xml
<CustomField>
    <fullName>How_many_Remote_Call_Forward_Paths__c</fullName>
    <label>How many Remote Call Forward Paths?</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>