UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Hunt_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Hunt_Sequence__c</fullName>
    <label>Hunt Sequence?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>