UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/ICB_Required__c.field-meta.xml
<CustomField>
    <fullName>ICB_Required__c</fullName>
    <label>ICB Required?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>