UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/If_POTS_selected__c.field-meta.xml
<CustomField>
    <fullName>If_POTS_selected__c</fullName>
    <label>If POTS selected</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Measured</fullName>
            </value>
            <value>
                <fullName>Combination of Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>