UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/If_Static_How_many_IP_s__c.field-meta.xml
<CustomField>
    <fullName>If_Static_How_many_IP_s__c</fullName>
    <label>If Static, How many IP&apos;s?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>13</fullName>
            </value>
            <value>
                <fullName>29</fullName>
            </value>
            <value>
                <fullName>61</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>