UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/If_Upgrade_Downgrade_Order__c.field-meta.xml
<CustomField>
    <fullName>If_Upgrade_Downgrade_Order__c</fullName>
    <description>Used to explain what type or change request related to Ethernet.</description>
    <label>If Upgrade/Downgrade/IP Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upgrading existing Bandwidth</fullName>
            </value>
            <value>
                <fullName>Downgrading existing Bandwidth</fullName>
            </value>
            <value>
                <fullName>IP Addition/Changes/Removal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>