UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/If_Yes_Number_of_Jacks_and_Work_Required__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_Number_of_Jacks_and_Work_Required__c</fullName>
    <label>If Yes,Number of Jacks and Work Required</label>
    <length>10</length>
    <type>Text</type>
</CustomField>