UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Implementor_PM__c.field-meta.xml
<CustomField>
    <fullName>Implementor_PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lead customer facing Project Manager.</inlineHelpText>
    <label>Project Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ordersImplementorPM</relationshipName>
    <type>Lookup</type>
</CustomField>