UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Install_Type__c.field-meta.xml
<CustomField>
    <fullName>Install_Type__c</fullName>
    <label>Install Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full Install</fullName>
                <default>true</default>
                <label>Full Install</label>
            </value>
            <value>
                <fullName>Self Install</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>