UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Interlata_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Interlata_Carrier__c</fullName>
    <label>Interlata Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Frontier</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>