UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/InterLata_Carrier_PIC_Code__c.field-meta.xml
<CustomField>
    <fullName>InterLata_Carrier_PIC_Code__c</fullName>
    <label>InterLata Carrier (PIC) Code?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>