UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Internal_Telecom_Group__c.field-meta.xml
<CustomField>
    <fullName>Internal_Telecom_Group__c</fullName>
    <label>Internal Telecom Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Telecom</fullName>
            </value>
            <value>
                <fullName>Internal Telecom - LD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>