UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/International_Calling_Plan__c.field-meta.xml
<CustomField>
    <fullName>International_Calling_Plan__c</fullName>
    <label>International Calling Plan?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>