UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/International_Plan__c.field-meta.xml
<CustomField>
    <fullName>International_Plan__c</fullName>
    <label>International Plan</label>
    <type>TextArea</type>
</CustomField>