UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/InternationalBillingAddress__c.field-meta.xml
<CustomField>
    <fullName>InternationalBillingAddress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>International Billing Address?</label>
    <type>Checkbox</type>
</CustomField>