UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/IntraLata_Carrier_LPIC_Code__c.field-meta.xml
<CustomField>
    <fullName>IntraLata_Carrier_LPIC_Code__c</fullName>
    <label>IntraLata Carrier (LPIC) Code?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>