UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_Billing__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated Federal DPI Order</label>
    <type>Checkbox</type>
</CustomField>