UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_Due_Date_Set__c.field-meta.xml
<CustomField>
    <fullName>Is_Due_Date_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Due Date Set</label>
    <type>Checkbox</type>
</CustomField>