UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_it_a_EAS_LCP_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_EAS_LCP_Plan__c</fullName>
    <inlineHelpText>EAS = Extended Area Service and LCP = Local Calling Plan</inlineHelpText>
    <label>Is This an EAS/LCP area?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EAS</fullName>
            </value>
            <value>
                <fullName>LCP</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>