UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_it_shared_or_location_department__c.field-meta.xml
<CustomField>
    <fullName>Is_it_shared_or_location_department__c</fullName>
    <label>Is it shared or location/department?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Location/Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>