UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/is_SE_Review_Complete__c.field-meta.xml
<CustomField>
    <fullName>is_SE_Review_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_SE_Review_Complete</label>
    <type>Checkbox</type>
</CustomField>