UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_the_customer_buying_off_of_the_State__c.field-meta.xml
<CustomField>
    <fullName>Is_the_customer_buying_off_of_the_State__c</fullName>
    <inlineHelpText>Is the customer buying off of the State Contract?</inlineHelpText>
    <label>Is The Customer Buying State Contract?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>