UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_the_Customer_Requesting_Diversity__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Customer_Requesting_Diversity__c</fullName>
    <label>Is the Customer Requesting Diversity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>