UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_the_Incoming_Customer_Tax_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Is_the_Incoming_Customer_Tax_Exempt__c</fullName>
    <label>Is the Incoming Customer Tax Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>