UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_the_list_of_locations_attached__c.field-meta.xml
<CustomField>
    <fullName>Is_the_list_of_locations_attached__c</fullName>
    <label>Is the list of locations attached?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>