UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_there_a_related_non_Vlocity_order__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_related_non_Vlocity_order__c</fullName>
    <label>Is there a related non-Vlocity order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>