UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_there_a_Related_Vlocity_Order__c.field-meta.xml
<CustomField>
    <fullName>Is_there_a_Related_Vlocity_Order__c</fullName>
    <label>Is there a Related Vlocity Order?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>