UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_this_a_Multi_Leg_Circuit_3_or_more__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Multi_Leg_Circuit_3_or_more__c</fullName>
    <inlineHelpText>3 or more locations</inlineHelpText>
    <label>Is this a Multi-Leg Circuit?  (3 or more</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>