UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_this_a_Remote_Call_Forward__c.field-meta.xml
<CustomField>
    <fullName>Is_this_a_Remote_Call_Forward__c</fullName>
    <label>Is this a Remote Call Forward?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>