UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_this_an_E_Reach_Off_Net_Ethernet__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_E_Reach_Off_Net_Ethernet__c</fullName>
    <label>Is this E-Reach or Off-Net?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>