UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_this_an_Off_Net__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_Off_Net__c</fullName>
    <description>Used on Circuit and Voice orders from STATS TMM 5/2021</description>
    <inlineHelpText>Click for Yes to indicate this site location is out of Frontier serving area. Vendor Lease required for Off-Net.</inlineHelpText>
    <label>Out of Franchise/Off-Net</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>