UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_this_an_Off_Premise_Extension__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_Off_Premise_Extension__c</fullName>
    <label>Is this an Off Premise Extension?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>