UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_this_an_SDWAN_VoiP_Migration__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_SDWAN_VoiP_Migration__c</fullName>
    <description>Created for Ross Ferguson for use on New SDWAN orders.  4/9/20</description>
    <inlineHelpText>Please select either Y(Yes) or N(No) when adding SDWAN</inlineHelpText>
    <label>Is this an SDWAN/VoiP Migration?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>