UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_this_an_upgrade__c.field-meta.xml
<CustomField>
    <fullName>Is_this_an_upgrade__c</fullName>
    <label>Is this an upgrade?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>