UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Is_Work_Required_Past_the_Demarc__c.field-meta.xml
<CustomField>
    <fullName>Is_Work_Required_Past_the_Demarc__c</fullName>
    <label>Is Work Required Past the Demarc?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>