UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/isCreatedByVlocity__c.field-meta.xml
<CustomField>
    <fullName>isCreatedByVlocity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is a Vlocity Order</label>
    <type>Checkbox</type>
</CustomField>