UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Kenan_Account__c.field-meta.xml
<CustomField>
    <fullName>Kenan_Account__c</fullName>
    <label>Kenan Account #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>