UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <formula>TEXT(Opportunity.LeadSource)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead Source</label>
    <type>Text</type>
</CustomField>