UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Leased__c.field-meta.xml
<CustomField>
    <fullName>Leased__c</fullName>
    <label>Leased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>