UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Leased_With__c.field-meta.xml
<CustomField>
    <fullName>Leased_With__c</fullName>
    <label>Leased With</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>TAMCO</fullName>
                <isActive>false</isActive>
                <label>TAMCO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>