UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Line_Speed__c.field-meta.xml
<CustomField>
    <fullName>Line_Speed__c</fullName>
    <label>Line Speed</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1MB</fullName>
            </value>
            <value>
                <fullName>2MB</fullName>
            </value>
            <value>
                <fullName>3MB</fullName>
            </value>
            <value>
                <fullName>5MB</fullName>
            </value>
            <value>
                <fullName>10MB</fullName>
            </value>
            <value>
                <fullName>15MB</fullName>
            </value>
            <value>
                <fullName>25MB</fullName>
            </value>
            <value>
                <fullName>50MB</fullName>
            </value>
            <value>
                <fullName>100MB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>