UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/List_accounts_requiring_change__c.field-meta.xml
<CustomField>
    <fullName>List_accounts_requiring_change__c</fullName>
    <label>List accounts requiring change</label>
    <length>255</length>
    <type>Text</type>
</CustomField>