UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/List_circuit_id_s_to_be_transferred__c.field-meta.xml
<CustomField>
    <fullName>List_circuit_id_s_to_be_transferred__c</fullName>
    <label>List circuit id&apos;s to be transferred</label>
    <length>255</length>
    <type>Text</type>
</CustomField>