UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/LMS_Plan__c.field-meta.xml
<CustomField>
    <fullName>LMS_Plan__c</fullName>
    <label>LMS Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flat</fullName>
            </value>
            <value>
                <fullName>Discount</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>