UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Local_Contact_on_Prem_Z_Loc__c.field-meta.xml
<CustomField>
    <fullName>Local_Contact_on_Prem_Z_Loc__c</fullName>
    <label>Local Contact on Prem Z Loc?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>