UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Location_Info_Exists__c.field-meta.xml
<CustomField>
    <fullName>Location_Info_Exists__c</fullName>
    <description>Number of Location Information Records for this order</description>
    <label>Location Info Exists</label>
    <summaryForeignKey>Location_Information__c.Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>