UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Long_Distance_Plan__c.field-meta.xml
<CustomField>
    <fullName>Long_Distance_Plan__c</fullName>
    <label>Long Distance Plan</label>
    <type>TextArea</type>
</CustomField>