UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Maintenance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Orders (Maintenance Contact)</relationshipLabel>
    <relationshipName>OrdersMC</relationshipName>
    <type>Lookup</type>
</CustomField>