UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Managed_Services_BTN__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_BTN__c</fullName>
    <description>Used for Managed Services orders when a BTN is to be provided.</description>
    <inlineHelpText>Only used for Managed Services orders</inlineHelpText>
    <label>Managed Services BTN</label>
    <type>Phone</type>
</CustomField>