UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Manager</label>
    <type>Email</type>
</CustomField>