UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Manager_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager_s_Manager__c</fullName>
    <label>Manager&apos;s Manager</label>
    <type>Email</type>
</CustomField>