UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Managers_Name__c.field-meta.xml
<CustomField>
    <fullName>Managers_Name__c</fullName>
    <formula>CreatedBy.Manager_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managers Name</label>
    <type>Text</type>
</CustomField>