UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Master_Agent_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Agent_Id__c</fullName>
    <formula>Opportunity.Master_Agent__r.Partner_ID__c</formula>
    <label>Master Agent Id</label>
    <type>Text</type>
</CustomField>