UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Master_Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Master_Agent_Name__c</fullName>
    <formula>Opportunity.Master_Agent__r.Name</formula>
    <label>Master Agent Name</label>
    <type>Text</type>
</CustomField>