UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Master_Summary_Number_MSN__c.field-meta.xml
<CustomField>
    <fullName>Master_Summary_Number_MSN__c</fullName>
    <label>Master Summary Number (MSN)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>