UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/MDN_Orders_Created__c.field-meta.xml
<CustomField>
    <fullName>MDN_Orders_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MDN Orders Created</label>
    <type>Checkbox</type>
</CustomField>