UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Meriden_New_Haven_POD_4__c.field-meta.xml
<CustomField>
    <fullName>Meriden_New_Haven_POD_4__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meriden &amp; New Haven POD 4</label>
    <type>Checkbox</type>
</CustomField>