UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Mirror_Number__c.field-meta.xml
<CustomField>
    <fullName>Mirror_Number__c</fullName>
    <label>Mirror Number</label>
    <type>Phone</type>
</CustomField>