UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Mitel_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Mitel_Account_Number__c</fullName>
    <inlineHelpText>Account number from Mitel bill</inlineHelpText>
    <label>Mitel Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>