UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Modified_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Modified_By_Id__c</fullName>
    <formula>CASESAFEID( LastModifiedById )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Modified By Id</label>
    <type>Text</type>
</CustomField>