UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/MRC_1__c.field-meta.xml
<CustomField>
    <fullName>MRC_1__c</fullName>
    <label>MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>