UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <formula>Opportunity.Total_Monthly_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>