UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/MRC_and_Engineering_Fees_Waived__c.field-meta.xml
<CustomField>
    <fullName>MRC_and_Engineering_Fees_Waived__c</fullName>
    <label>MRC and Engineering Fees Waived</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>