UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/MRC_BDT__c.field-meta.xml
<CustomField>
    <fullName>MRC_BDT__c</fullName>
    <label>MRC BDT</label>
    <length>50</length>
    <type>Text</type>
</CustomField>