UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/MRC_BDT_PRICING__c.field-meta.xml
<CustomField>
    <fullName>MRC_BDT_PRICING__c</fullName>
    <label>MRC BDT PRICING</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>