UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/MRC_Charges__c.field-meta.xml
<CustomField>
    <fullName>MRC_Charges__c</fullName>
    <label>MRC Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>