UCF-APR2.4/ftr main/force-app/main/default/objects/Order/fields/Multi_Location__c.field-meta.xml
<CustomField>
    <fullName>Multi_Location__c</fullName>
    <inlineHelpText>If &quot;Yes&quot;, please refer to DGF for additional information.</inlineHelpText>
    <label>Multi-Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>